--- a/modules/centralfiles/templates/index.html
+++ b/modules/centralfiles/templates/index.html
@@ -43,7 +43,7 @@
         <h2 class="controls-title">Add/Remove People</h2>
         <div class="controls-grid">
           <input type="text" id="name-input" placeholder="Enter full name">
-          <button class="btn btn-primary" onclick="addName()">Add Person</button>
+          <button class="btn btn-primary">Add Person</button>
           <!-- Remove Name button has been removed -->
         </div>
       </section>
