Added Extra Security

--- a/modules/knowledge/templates/admin.html
+++ b/modules/knowledge/templates/admin.html
@@ -74,6 +74,11 @@
             <label for="web_port">Knowledge app port number:</label>
             <input type="number" id="web_port" data-config-name="web_port" min="0" max="65535">
           </section>
+
+          <section class="config-card">
+            <label for="do_bot_identification">Detect Bot Request:</label>
+            <input type="checkbox" id="do_bot_identification" data-config-name="do_bot_identification">
+          </section>
         </div>
       </div>
 
