--- a/modules/knowledge/templates/admin.html
+++ b/modules/knowledge/templates/admin.html
@@ -91,7 +91,7 @@
           </section>
 
           <section class="config-card">
-            <label for="sys_email_password">System Email Password</label>
+            <label for="sys_email_password">System Email App Password</label>
             <input type="text" id="sys_email_password" data-config-name="sys_email_password">
           </section>
         </div>
